начинаем вёрстку с препроцессором(2)

--- a/source/less/blocks/agitation.less
+++ b/source/less/blocks/agitation.less
@@ -1,10 +1,11 @@
 .agitation {
   padding-top: 54px;
-}
+  padding-bottom: 58px;
 
-.agitation__text {
-  color: #283645;
-  text-align: center;
-  line-height: 30px;
-  margin: 0;
+  &__text {
+    color: #283645;
+    text-align: center;
+    line-height: 30px;
+    margin: 0;
+  }
 }
