--- a/source/less/blocks/comment.less
+++ b/source/less/blocks/comment.less
@@ -1,18 +1,16 @@
-.comment__user-name {
-  color: #283645;
-  font-weight: bold;
-}
-
-.comment__user-message {
+.comment {
   color: #283645;
   line-height: 24px;
-  // font-weight: regular;
-}
+  padding-top: 25px;
 
-.comment__time {
-  text-transform: uppercase;
-  font-size: 12px;
-  line-height: 24px;
-  color: #283645;
-  font-weight: 300;
+  &__user-name {
+    font-weight: bold;
+    margin: 0;
+  }
+
+  &__time {
+    text-transform: uppercase;
+    font-size: 12px;
+    font-weight: 300;
+  }
 }
