--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -1,13 +1,27 @@
 .download {
   color: #ffffff;
   background-color: #1d2631;
-}
 
-.download__button {
-  font-size: 18px;
-  line-height: 18px;
-}
+  &__button {
+    font-size: 18px;
+    line-height: 18px;
+  }
 
-.download__availability {
-  line-height: 24px;
+  &__availability {
+    line-height: 24px;
+    padding-bottom: 34px;
+    margin: 0;
+  }
+
+  &__image {
+    padding-bottom: 28px;
+  }
+
+  &__link {
+    padding-bottom: 32px;
+  }
+
+  &__logo {
+    padding-bottom: 28px;
+  }
 }
