--- a/source/less/blocks/opportunity.less
+++ b/source/less/blocks/opportunity.less
@@ -1,12 +1,18 @@
-.opportunity__item-head {
-  font-size: 18px;
-  line-height: 24px;
-  font-weight: bold;
-  text-align: center;
-  color: #283645;
-}
+.opportunity {
+  &__item-head {
+    margin: 0;
+    padding-bottom: 22px;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: bold;
+    text-align: center;
+    color: #283645;
+  }
 
-.opportunity__item-body {
-  text-align: center;
-  color: #283645;
+  &__item-body {
+    margin: 0;
+    padding-bottom: 40px;
+    text-align: center;
+    color: #283645;
+  }
 }
