--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,4 +1,31 @@
-.page-footer__develop-link {
-  color: #283645;
-  line-height: 18px;
+// задал временные цвета для наглядности расположения пока не размеченых элементов
+.page-footer {
+  padding-top: 40px;
+  width: 500px;
+  height: 280px;
+
+  &__logo {
+    background: green;
+    width: 150px;
+    height: 40px;
+    margin-bottom: 40px;
+  }
+
+  &__social-links {
+    width: 150px;
+    height: 40px;
+    background: pink;
+    margin-bottom: 43px;
+  }
+
+  &__develop {
+    width: 150px;
+    height: 40px;
+    background-color: blue;
+  }
+
+  &__develop-link {
+    color: #283645;
+    line-height: 18px;
+  }
 }
