--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -1,7 +1,9 @@
-.photo__wrapper-image {
-  background-color: #2b3b4b;
-  background-image: url("/source/img/bg-back-mobile@1x.jpg");
-  background-repeat: no-repeat;
-  width: 320px;
-  height: 240px;
+.photo {
+  &__wrapper-image {
+    background-image: url("/source/img/bg-back-mobile@1x.jpg");
+    background-color: #2b3b4b;
+    background-repeat: no-repeat;
+    width: 320px;
+    height: 240px;
+  }
 }
