--- a/source/less/blocks/offer.less
+++ b/source/less/blocks/offer.less
@@ -1,13 +1,29 @@
-.offer__opportunity {
-  background-color: #f2f2f2;
-}
+.offer {
+  &__opportunity {
+    background-color: #f2f2f2;
+    padding-top: 50px;
+  }
 
-.offer__question {
-  font-size: 24px;
-  color: #283645;
-}
+  &__question {
+    padding-top: 46px;
+    padding-bottom: 37px;
+    margin: 0;
+    font-size: 24px;
+    color: #283645;
+  }
 
-.offer__slogan {
-  font-size: 24px;
-  color: #283645;
+  &__slogan {
+    margin: 0;
+    padding-bottom: 50px;
+    font-size: 24px;
+    color: #283645;
+  }
+
+  &__image {
+    text-align: center;
+  }
+
+  &__header {
+    text-align: center;
+  }
 }
