--- a/source/less/blocks/other-styles.less
+++ b/source/less/blocks/other-styles.less
@@ -1,3 +1,13 @@
+@font-face {
+  font-family: "Open Sans";
+  src: url("../../fonts/opensans.woff") format("woff"),
+    url("../../fonts/opensansbold.woff") format("woff"),
+    url("../../fonts/opensanslight.woff") format("woff"),
+    url("../../fonts/opensans.woff2") format("woff2"),
+    url("../../fonts/opensansbold.woff2") format("woff2"),
+    url("../../fonts/opensanslight.woff2") format("woff2");
+}
+
 body {
   font-size: 14px;
   font-family: "Open Sans", "Arial", sans-serif;
@@ -7,4 +17,17 @@ body {
 a {
   color: #ffffff;
   text-decoration: none;
+}
+
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
