--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,12 +1,14 @@
-.page-header__title {
-  color: #ffffff;
-  font-size: 24px;
-  font-weight: lighter;
-  text-align: center;
-  margin-top: 0;
-  padding-top: 35px;
-}
+.page-header {
+  &__title {
+    color: #ffffff;
+    font-size: 24px;
+    font-weight: 300;
+    margin-top: 0;
+    padding-top: 35px;
+    text-align: center;
+  }
 
-.page-header__photo {
-  margin: 0;
+  &__photo {
+    margin: 0;
+  }
 }
