--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,15 +1,14 @@
 .site-list {
   padding: 0;
   margin: 0;
-}
 
-.site-list__item {
-  text-transform: uppercase;
-  font-size: 18px;
-  list-style: none;
-  text-align: center;
-
-  // padding-top:25px;
-
-  // border-bottom: 1px solid #000001;
+  &__item {
+    text-transform: uppercase;
+    font-size: 18px;
+    list-style: none;
+    text-align: center;
+    padding: 25px;
+    border-bottom: 1px solid #000001;
+    border-top: 1px solid #485461;
+  }
 }
