--- a/source/less/blocks/user-photo.less
+++ b/source/less/blocks/user-photo.less
@@ -1,9 +1,11 @@
-.user-photo__comment {
-  background-color: #f2f2f2;
-}
+.user-photo {
+  &__comment {
+    background-color: #f2f2f2;
+  }
 
-.user-photo__name {
-  text-transform: uppercase;
-  background-color: #d22856;
-  color: #ffffff;
+  &__name {
+    text-transform: uppercase;
+    background-color: #d22856;
+    color: #ffffff;
+  }
 }
