--- a/source/less/style.less
+++ b/source/less/style.less
@@ -1,11 +1,13 @@
 @import "blocks/agitation.less";
 @import "blocks/comment.less";
 @import "blocks/download.less";
+@import "bloks/fonts.less";
 @import "blocks/logo-wrapper.less";
 @import "blocks/main-nav.less";
 @import "blocks/offer.less";
 @import "blocks/opportunity.less";
-@import "blocks/other-styles.less";
+@import "blocks/general.less";
+@import "blocks/helpers.less";
 @import "blocks/page-footer.less";
 @import "blocks/page-header.less";
 @import "blocks/photo.less";
