--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -14,7 +14,8 @@
   }
 
   &__image {
-    padding-bottom: 28px;
+
+    background-image: url("/source/img/bg-back-mobile@1x.jpg");
   }
 
   &__link {
@@ -23,5 +24,36 @@
 
   &__logo {
     padding-bottom: 28px;
+  }
+
+  &__agitation {
+    margin: 0;
+  }
+}
+
+.download__image-phone {
+  width: 260px;
+  height: 300px;
+  background: url("/source/img/iphone-hand-mobile@1x.png") no-repeat;
+}
+
+@media (min-width: 660px) {
+  .download__wrapper {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: flex-end;
+    min-width: 660px;
+    min-height: 620px;
+    background-image: url("/source/img/bg-back-tablet@1x.jpg");
+  }
+
+  .download__image- {
+    background: url("");
+  }
+
+  .download__image-phone {
+    width: 500px;
+    height: 550px;
+    background: url("/source/img/iphone-hand-tablet@1x.png") no-repeat 165%;
   }
 }
