--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,3 +1,19 @@
 .main-nav {
   background-color: #283645;
 }
+
+@media (min-width: 1200px) {
+  .main-nav__list {
+    display: flex;
+  }
+
+  .main-nav {
+    min-width: 1200px;
+    display: flex;
+  }
+
+  .main-nav__wrapper {
+    width: 630px;
+    padding-left: 160px;
+  }
+}
