--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,4 +1,8 @@
 .page-header {
+  width: 320px;
+  margin: 0 auto;
+  background-color: #1d2632;
+
   &__title {
     color: #ffffff;
     font-size: 24px;
@@ -10,5 +14,24 @@
 
   &__photo {
     margin: 0;
+  }
+
+  // &__logo{
+  //   background-image: url(/source/img/logo-pink-white-mobile.svg);
+  //   width: 100px;
+  //   height: 50px;
+  //   background-size: 100 50;
+  // }
+}
+
+@media (min-width: 660px) {
+  .page-header {
+    min-width: 660px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .page-header {
+    min-width: 1200px;
   }
 }
