Начинаем верстать адаптивные сетки

--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -2,6 +2,12 @@
   background-color: #283645;
 }
 
+@media (min-width: 660px) {
+  .main-nav__toggle {
+    .visHid();
+  }
+}
+
 @media (min-width: 1200px) {
   .main-nav__list {
     display: flex;
@@ -10,10 +16,10 @@
   .main-nav {
     min-width: 1200px;
     display: flex;
+    background-color: #0f151b;
   }
 
   .main-nav__wrapper {
-    width: 630px;
     padding-left: 160px;
   }
 }
