--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -3,7 +3,22 @@
     background-image: url("/source/img/bg-back-mobile@1x.jpg");
     background-color: #2b3b4b;
     background-repeat: no-repeat;
-    width: 320px;
-    height: 240px;
+    height: 170px;
+  }
+}
+
+@media (min-width: 660px) {
+  .photo__wrapper-image {
+    width: 660px;
+    height: 320px;
+    background: url("/source/img/bg-back-tablet@1x.jpg");
+  }
+}
+
+@media (min-width: 1200px) {
+  .photo__wrapper-image {
+    width: 1200px;
+    height: 390px;
+    background: url("/source/img/bg-back-desktop@1x.jpg");
   }
 }
