--- a/source/less/blocks/opportunity.less
+++ b/source/less/blocks/opportunity.less
@@ -20,3 +20,23 @@
     color: pink;
   }
 }
+
+@media (min-width: 660px) {
+  .opportunity {
+    width: 300px;
+  }
+
+  .opportunity__item-body {
+    text-align: left;
+  }
+
+  .opportunity__item-head {
+    text-align: left;
+  }
+}
+
+@media (min-width: 1200px) {
+  .opportunity--qwerty {
+    width: 570px;
+  }
+}
