--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -1,6 +1,6 @@
 .photo {
   &__wrapper-image {
-    background-image: url("/source/img/bg-back-mobile@1x.jpg");
+    background-image: url("../img/bg-back-mobile@1x.jpg");
     background-color: #2b3b4b;
     background-repeat: no-repeat;
     height: 170px;
@@ -11,7 +11,7 @@
   .photo__wrapper-image {
     width: 660px;
     height: 320px;
-    background: url("/source/img/bg-back-tablet@1x.jpg");
+    background: url("../img/bg-back-tablet@1x.jpg");
   }
 }
 
@@ -19,6 +19,6 @@
   .photo__wrapper-image {
     width: 1200px;
     height: 390px;
-    background: url("/source/img/bg-back-desktop@1x.jpg");
+    background: url("../img/bg-back-desktop@1x.jpg");
   }
 }
