--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -2,6 +2,10 @@
   background-color: #283645;
 }
 
+.main-nav__toggle {
+  display: none;
+}
+
 @media (min-width: 660px) {
   .main-nav__toggle {
     display: none;
