--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -5,6 +5,8 @@
   &__item {
     text-transform: uppercase;
     font-size: 18px;
+    font-weight: bold;
+    line-height: 32px;
     list-style: none;
     text-align: center;
     padding: 25px;
