--- a/source/less/blocks/logo-wrapper.less
+++ b/source/less/blocks/logo-wrapper.less
@@ -1,3 +1,17 @@
 .logo-wrapper {
-  height: 65px;
+  height: 70px;
+  border-bottom: 1px solid #000000;
+}
+
+@media (min-width: 660px) {
+  .logo-wrapper {
+    height: 109px;
+    // height: 109px;
+    // position: absolute;
+    // top: -110px;
+    // width: 660px;
+    // height: 110px;
+    // background: red;
+    // opacity: 0.3;
+  }
 }
