--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -25,9 +25,9 @@
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: @desktop-width) {
   .page-main {
-    max-width: 1200px;
+    max-width: 960px;
 
     .page-main__wrapper {
       max-width: 940px;
