--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -3,20 +3,20 @@
     background-image: url("../img/bg-back-mobile@1x.jpg");
     background-color: #2b3b4b;
     background-repeat: no-repeat;
-    height: 170px;
+    min-height: 168px;
   }
 }
 
 @media (min-width: 660px) {
   .photo__wrapper-image {
-    height: 320px;
+    min-height: 329px;
     background: url("../img/bg-back-tablet@1x.jpg");
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: @desktop-width) {
   .photo__wrapper-image {
-    height: 390px;
+    min-height: 390px;
     background: url("../img/bg-back-desktop@1x.jpg");
   }
 }
