--- a/source/less/style.less
+++ b/source/less/style.less
@@ -15,3 +15,5 @@
 @import "blocks/site-list.less";
 @import "blocks/user-photo.less";
 @import "normalize.less";
+@import "blocks/variables.less";
+@import "blocks/social-links.less";
