--- a/source/less/blocks/agitation.less
+++ b/source/less/blocks/agitation.less
@@ -1,10 +1,23 @@
 .agitation {
-  padding: 50px 40px;
+  padding-top: 45px;
+  padding-bottom: 49px;
+}
 
-  &__text {
-    color: #283645;
-    text-align: center;
+.agitation__text {
+  color: #283645;
+  text-align: center;
+  line-height: 30px;
+  margin: 0;
+}
+
+@media (min-width: @tablet-width) {
+  .agitation {
+    padding-top: 59px;
+    padding-bottom: 75px;
+  }
+
+  .agitation__text {
+    font-size: 18px;
     line-height: 30px;
-    margin: 0;
   }
 }
