--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -1,28 +1,105 @@
 .main-nav {
   background-color: #283645;
+  position: relative;
 }
 
 .main-nav__toggle {
-  display: none;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: 2;
+
+  display: block;
+  width: 70px;
+
+  height: 50px;
+  background: #283645;
+
+  cursor: pointer;
+  border: none;
 }
 
-@media (min-width: 660px) {
-  .main-nav__toggle {
+.main-nav--closed .main-nav__toggle::before {
+  content: "";
+
+  position: absolute;
+  top: 15px;
+  left: 17px;
+
+  width: 36px;
+  height: 2px;
+
+  background-color: #ffffff;
+  box-shadow: 0 8px 0 0 #ffffff, 0 16px 0 0 #ffffff;
+}
+
+// .main-nav--closed .main-nav__toggle:active::before {
+//   background-color: rgba(255, 255, 255, 0.3);
+//   box-shadow: 0 8px 0 0 rgba(255, 255, 255, 0.3), 0 16px 0 0 rgba(255, 255, 255, 0.3);
+// }
+
+.main-nav--opened .main-nav__toggle {
+  &::before,
+  &::after {
+    content: "";
+    position: absolute;
+    top: 30px;
+    left: 24px;
+    width: 30px;
+    height: 5px;
+    background-color: #ffffff;
+  }
+
+  &::before {
+    transform: rotate(45deg);
+    box-shadow: none;
+  }
+
+  &::after {
+    transform: rotate(-45deg);
+  }
+
+  // &:active::before,
+  // &:active::after {
+  //   background-color: rgba(255, 255, 255, 0.3);
+  // }
+}
+
+@media (max-width: 1199px) {
+  .main-nav--closed .site-list__item {
     display: none;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 660px) {
+  .main-nav--opened .main-nav__toggle {
+    &::before,
+    &::after {
+      top: 54px;
+    }
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .main-nav__toggle {
+    display: none;
+  }
+
   .main-nav__list {
+    outline: 2px solid red;
     display: flex;
+    width: 620px;
+    justify-content: space-between;
   }
 
   .main-nav {
     display: flex;
     background-color: #0f151b;
+    outline: 2px solid tomato;
   }
 
   .main-nav__wrapper {
-    padding-left: 160px;
+    margin-top: 46px;
+    padding-left: 73px;
   }
 }
