--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,48 +1,112 @@
-// задал временные цвета для наглядности расположения пока не размеченых элементов
 .page-footer {
   padding-top: 40px;
-  max-width: 320px;
-  margin: 0 auto;
 
   &__logo {
-    background: green;
     width: 150px;
-    height: 40px;
-    margin-bottom: 40px;
+    margin-bottom: 33px;
   }
 
   &__social-links {
     width: 150px;
-    height: 40px;
-    background: pink;
-    margin-bottom: 43px;
+    height: 55px;
+    margin-bottom: 45px;
   }
 
   &__develop {
     width: 150px;
     height: 40px;
-    background-color: blue;
+    padding-left: 19px;
   }
 
-  &__develop-link {
-    color: #283645;
-    line-height: 18px;
+  &--index {
+    display: none;
   }
+}
+
+.page-footer__wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.page-footer__develop-link {
+  position: relative;
+  display: block;
+  color: #283645;
+  line-height: 18px;
+}
+
+.page-footer__develop-link-icon {
+  position: absolute;
+  top: -8px;
+  right: 11px;
+  width: 47px;
+  height: 41px;
 }
 
 @media (min-width: 660px) {
   .page-footer {
+
     max-width: 620px;
+
+    margin: 0 auto;
+    padding: 0;
+    padding-top: 35px;
+
+    &--index {
+      display: block;
+    }
   }
 
   .page-footer__wrapper {
+    min-height: 128px;
+    outline: 2px solid green;
     display: flex;
+    flex-direction: row;
     justify-content: space-between;
+  }
+
+  .page-footer__logo {
+    outline: 2px solid blue;
+    margin: 0;
+  }
+
+  .page-footer__social-links {
+    outline: 2px solid blue;
+    width: 150px;
+    height: 55px;
+    margin: 0;
+    margin-top: 10px;
+  }
+
+  .page-footer__develop {
+    padding: 0;
+  }
+
+  .page-footer__develop-link {
+    outline: 2px solid blue;
+    position: relative;
+    padding: 20px 0 0 20px;
+    display: block;
+  }
+
+  .page-footer__develop-link-icon {
+    position: absolute;
+    top: 10px;
+    right: -10px;
+    width: 47px;
+    height: 41px;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: @desktop-width) {
   .page-footer {
     max-width: 940px;
+  }
+
+  .page-footer__develop-link {
+    padding: 0;
+    padding-top: 20px;
+    font-size: 18px;
   }
 }
