--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,33 +1,41 @@
 .page-header {
-
   margin: 0 auto;
   background-color: #1d2632;
 
   &__title {
     color: #ffffff;
     font-size: 24px;
+    line-height: 28px;
     font-weight: 300;
     margin-top: 0;
-    padding-top: 35px;
+    padding-top: 31px;
     text-align: center;
   }
 
-  // &__logo{
-  //   background-image: url(/source/img/logo-pink-white-mobile.svg);
-  //   width: 100px;
-  //   height: 50px;
-  //   background-size: 100 50;
-  // }
-}
-
-@media (min-width: 660px) {
-  .page-header {
-    max-width: 660px;
+  &__logo {
+    display: block;
+    padding: 20px;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: 660px) {
+  .page-header__logo {
+    padding: 44px 93px;
+  }
+
   .page-header {
-    max-width: 1200px;
+    max-width: 660px;
+  }
+
+  .page-header__title {
+    font-size: 50px;
+    line-height: 60px;
+    padding-top: 69px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .page-header {
+    max-width: 960px;
   }
 }
