--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -9,14 +9,20 @@
     line-height: 32px;
     list-style: none;
     text-align: center;
-    padding: 25px;
+    padding: 15px;
     border-bottom: 1px solid #000001;
     border-top: 1px solid #485461;
+    letter-spacing: 0.8px;
   }
 }
 
-@media (min-width: 1200px) {
+@media (min-width: @desktop-width) {
   .site-list__item {
     border: none;
+    text-transform: none;
+    font-weight: 300;
+    letter-spacing: 0;
+    line-height: 18px;
+    padding: 0;
   }
 }
