Адаптивне декор элементы index

--- a/source/less/blocks/agitation.less
+++ b/source/less/blocks/agitation.less
@@ -7,7 +7,10 @@
   color: #283645;
   text-align: center;
   line-height: 30px;
-  margin: 0;
+  font-size: 14px;
+  font-weight: 400;
+  margin: 0 auto;
+  max-width: 280px;
 }
 
 @media (min-width: @tablet-width) {
