--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -1,5 +1,5 @@
 .page-main {
-  margin: 0 auto;
+  // margin: 0 auto;
 
   .page-main__logo-image--panorama {
     width: 100%;
@@ -7,14 +7,14 @@
 
   .page-main__wrapper {
     max-width: 280px;
-    margin: 0 auto;
+    // margin: 0 auto;
   }
 }
 
 @media (min-width: 660px) {
   .page-main {
-    max-width: 660px;
-    margin: 0 auto;
+    // max-width: 660px;
+    // margin: 0 auto;
 
     .page-main__wrapper {
       display: flex;
@@ -26,11 +26,11 @@
 }
 
 @media (min-width: @desktop-width) {
-  .page-main {
-    max-width: 960px;
+  // .page-main {
+  //   max-width: 960px;
 
-    .page-main__wrapper {
-      max-width: 940px;
-    }
-  }
+  //   .page-main__wrapper {
+  //     max-width: 940px;
+  //   }
+  // }
 }
