--- a/source/less/blocks/user-photo.less
+++ b/source/less/blocks/user-photo.less
@@ -34,7 +34,7 @@
 
 .user-photo__comment-panorama {
   width: 280px;
-  margin: 0 auto;
+  // margin: 0 auto;
 }
 
 .user-photo__comment-wrapper {
@@ -49,7 +49,7 @@
 
     .user-photo__comment-panorama {
       min-width: 620px;
-      margin: 0 auto;
+      // margin: 0 auto;
     }
   }
 
