--- a/source/less/blocks/download.less
+++ b/source/less/blocks/download.less
@@ -1,6 +1,6 @@
 .download {
   color: #ffffff;
-  background-color: #1d2631;
+  background: #1d2631;
   padding-bottom: 33px;
 
   &__button {
@@ -25,7 +25,6 @@
     font-size: 18px;
     font-weight: bold;
     line-height: 18px;
-    letter-spacing: 0.8px;
     padding: 15px;
     border: 3px solid #ffffff;
     border-radius: 50px;
@@ -67,14 +66,18 @@
     display: block;
     height: 395px;
     background: url("../img/iphone-hand-mobile@1x.png") no-repeat 0 bottom, url("../img/bg-back-mobile@1x.jpg") no-repeat;
+    background-size: auto, cover;
   }
 }
 
 @media (min-width: 660px) {
   .download {
     min-height: 618px;
-    background-image: url("../img/bg-back-tablet@1x.jpg");
+
     padding-bottom: 0;
+    margin-top: 366px;
+
+    background: transparent;
   }
 
   .download__wrapper {
@@ -91,20 +94,19 @@
     width: 300px;
     margin: 0 20px;
     text-align: center;
-    letter-spacing: 0.7px;
     outline: 2px solid teal;
   }
 
   .download__agitation {
     display: block;
     font-size: 40px;
-    line-height: 45px;
+    line-height: 47px;
     font-weight: 300;
   }
 
   .download__link {
-    margin-top: 40px;
-    margin-bottom: 36px;
+    margin-top: 33px;
+    margin-bottom: 32px;
   }
 
   .download__logo {
@@ -122,35 +124,34 @@
 
 @media (min-width: @desktop-width) {
   .download {
-    background-image: url("../img/bg-back-desktop@1x.jpg");
+    margin: 0;
   }
 
   .download__wrapper {
-    padding-top: 117px;
-    background: url("../img/iphone-hand-desktop@1x.png") no-repeat -28% 100%;
+    padding-top: 220px;
+    background: url("../img/iphone-hand-desktop@1x.png") no-repeat -29% 100%;
   }
 
   .download__column {
-    min-height: 626px;
-    margin-left: 10px;
+    min-height: 633px;
+    margin-left: 11px;
     outline: 2px solid green;
   }
 
   .download__agitation {
     display: block;
     font-size: 50px;
-    line-height: 55px;
+    line-height: 59px;
     font-weight: 300;
-    letter-spacing: 0.5px;
   }
 
   .download__link {
-    margin-top: 60px;
+    margin-top: 55px;
     margin-bottom: 56px;
-    letter-spacing: 2.6px;
+    letter-spacing: 2px;
   }
 
   .download__logo {
-    margin-bottom: 50px;
+    margin-bottom: 35px;
   }
 }
