--- a/source/less/blocks/opportunity.less
+++ b/source/less/blocks/opportunity.less
@@ -7,7 +7,6 @@
     margin-bottom: 11px;
     font-size: 18px;
     line-height: 24px;
-    letter-spacing: 1px;
     font-weight: 700;
     color: #283645;
   }
@@ -27,8 +26,8 @@
 @media (min-width: 660px) {
   .opportunity {
 
-    margin-bottom: 35px;
-    padding-left: 9px;
+    margin-bottom: 34px;
+    padding-left: 10px;
   }
 
   .opportunity--time {
@@ -40,15 +39,16 @@
   .opportunity__item-body {
     text-align: left;
     width: 307px;
-    letter-spacing: -0.3px;
     outline: 2px solid teal;
   }
 
   .opportunity__item-head {
     text-align: left;
+    margin-bottom: 12px;
   }
 
   .opportunity__item-head--time {
+    padding-top: 37px;
     font-weight: bold;
     font-size: 30px;
     line-height: 36px;
@@ -87,6 +87,7 @@
 
   .opportunity__item-head--time {
     text-align: left;
+    padding-top: 91px;
   }
 
   .opportunity__item-head--gap {
