--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -1,15 +1,19 @@
 .page-header {
-  margin: 0 auto;
-  background-color: #1d2632;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
 
   &__title {
     color: #ffffff;
     font-size: 24px;
     line-height: 28px;
     font-weight: 300;
-    margin-top: 0;
-    padding-top: 31px;
     text-align: center;
+
+    padding-top: 31px;
+    max-width: 190px;
+    margin: 0 auto;
   }
 
   &__logo {
@@ -18,13 +22,24 @@
   }
 }
 
+.page-header__photo {
+  margin-top: 326px;
+}
+
+.page-header::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background: #1d2632;
+  opacity: 0.3;
+}
+
 @media (min-width: 660px) {
   .page-header__logo {
     padding: 44px 93px;
-  }
-
-  .page-header {
-    max-width: 660px;
   }
 
   .page-header__title {
@@ -34,8 +49,6 @@
   }
 }
 
-@media (min-width: @desktop-width) {
-  .page-header {
-    max-width: 960px;
-  }
-}
+// @media (min-width: @desktop-width) {
+
+// }
