--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -1,6 +1,7 @@
 .site-list {
   padding: 0;
   margin: 0;
+  background: #283645;
 
   &__item {
     text-transform: uppercase;
@@ -12,11 +13,14 @@
     padding: 15px;
     border-bottom: 1px solid #000001;
     border-top: 1px solid #485461;
-    letter-spacing: 0.8px;
   }
 }
 
 @media (min-width: @desktop-width) {
+  .site-list {
+    background: transparent;
+  }
+
   .site-list__item {
     border: none;
     text-transform: none;
