Коммит для мерджа

--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -11,6 +11,13 @@
   }
 }
 
+.page-main__form {
+  width: 15px;
+  height: 15px;
+  background: red;
+  margin-top: 567px;
+}
+
 @media (min-width: 660px) {
   .page-main {
     // max-width: 660px;
