Адаптивные декор элементы

--- a/source/less/blocks/agitation.less
+++ b/source/less/blocks/agitation.less
@@ -15,12 +15,25 @@
 
 @media (min-width: @tablet-width) {
   .agitation {
-    padding-top: 59px;
-    padding-bottom: 75px;
+    padding-top: 92px;
+    padding-bottom: 76px;
   }
 
   .agitation__text {
     font-size: 18px;
     line-height: 30px;
+    max-width: 440px;
+  }
+}
+
+@media (min-width: @desktop-width) {
+  .agitation {
+    padding-top: 92px;
+    padding-bottom: 89px;
+  }
+
+  .agitation__text {
+    max-width: 575px;
+    padding-left: 152px;
   }
 }
