--- a/source/less/blocks/logo-wrapper.less
+++ b/source/less/blocks/logo-wrapper.less
@@ -3,8 +3,12 @@
   // border-bottom: 1px solid #000000;
 }
 
-@media (min-width: 660px) {
+@media (min-width: @tablet-width) {
   .logo-wrapper {
     height: 110px;
   }
 }
+// @media (min-width: @desktop-width) {
+//   .logo-wrapper {
+//   }
+// }
