--- a/source/less/blocks/page-main.less
+++ b/source/less/blocks/page-main.less
@@ -4,11 +4,6 @@
   .page-main__logo-image--panorama {
     width: 100%;
   }
-
-  .page-main__wrapper {
-    max-width: 280px;
-    // margin: 0 auto;
-  }
 }
 
 .page-main__form {
@@ -22,22 +17,19 @@
   .page-main {
     // max-width: 660px;
     // margin: 0 auto;
+  }
 
-    .page-main__wrapper {
-      display: flex;
-      flex-wrap: wrap;
-      max-width: 620px;
-      justify-content: space-between;
-    }
+  .page-main__wrapper {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
   }
 }
 
-@media (min-width: @desktop-width) {
-  // .page-main {
-  //   max-width: 960px;
+// @media (min-width: @desktop-width) {
 
-  //   .page-main__wrapper {
-  //     max-width: 940px;
-  //   }
-  // }
-}
+//   .page-main__wrapper {
+//     background: blue;
+
+//   }
+// }
