--- a/source/less/blocks/photo.less
+++ b/source/less/blocks/photo.less
@@ -1,8 +1,8 @@
 .photo {
   &__wrapper-image {
-    background-image: url("../img/bg-back-mobile@1x.jpg");
-    background-color: #2b3b4b;
-    background-repeat: no-repeat;
+    // background-image: url("../img/bg-back-mobile@1x.jpg");
+    // background-color: #2b3b4b;
+    // background-repeat: no-repeat;
     min-height: 168px;
   }
 }
@@ -10,13 +10,15 @@
 @media (min-width: 660px) {
   .photo__wrapper-image {
     min-height: 329px;
-    background: url("../img/bg-back-tablet@1x.jpg");
+    // background: url("../img/bg-back-tablet@1x.jpg");
   }
 }
 
 @media (min-width: @desktop-width) {
   .photo__wrapper-image {
-    min-height: 390px;
-    background: url("../img/bg-back-desktop@1x.jpg");
+    min-height: 284px;
+    padding-top: 110px;
+
+    // background: url("../img/bg-back-desktop@1x.jpg");
   }
 }
